fix: fix horizontal scroll

--- a/views/home/ui/enter-section/enter-section.module.css
+++ b/views/home/ui/enter-section/enter-section.module.css
@@ -2,6 +2,8 @@
 	position: relative;
 	z-index: 2;
 
+	overflow: hidden;
+
 	height: 100vh;
 	padding-block-start: 6vw;
 
